--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
         <div class="box-btn-actions">
             <button class="btn-action">Agendar consultoria</button>
             <!-- <button class="btn-action">Entrar</button> -->
+            <a href="https://wa.me/5551985198410" target="_blank" class="btn-action whatsapp-button">
+            Fale no WhatsApp
+        </a>
         </div>
     </header>
+    
 
     <main>
         <section class="first-section">
