--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
         <div class="box-btn-actions">
             <button class="btn-action">Agendar consultoria</button>
             <!-- <button class="btn-action">Entrar</button> -->
-            <a href="https://wa.me/5551985198410" target="_blank" class="btn-action whatsapp-button">
-            Fale no WhatsApp
         </a>
         </div>
+        <div class="whatsapp-fixed">
+    <a href="https://wa.me/5551985198410" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="whatsapp-icon">
+    </a>
+</div>
     </header>
     
 
