--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <a href="#contact" class="nav-links">Contato</a>
         </nav>
         <div class="box-btn-actions">
-            <button class="btn-action">Agendar consultoria</button>
-            <!-- <button class="btn-action">Entrar</button> -->
-        </a>
+            <a href="https://forms.zohopublic.com/jenodev1/form/ChecklistdoConsultrio/formperma/O6OkOqSZjrm4NDficXc9cg96O-9gSkkK6TLC0o87C0Q" target="_blank">
+        <button class="btn-action">Agendar consultoria</button>
+    </a>
 
             <div class="whatsapp-fixed">
     <a href="https://wa.me/5551985198410" target="_blank">
